# Chimera_RUST

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
certification-artifacts/: certification-status.json  environment.txt
crates/chimera-adb/: Cargo.toml
crates/chimera-adb/src/: auth.rs  client.rs  diagnostics.rs  lib.rs  operations.rs  protocol.rs  services.rs  shell.rs  sync.rs
crates/chimera-adb/tests/: operations_test.rs
crates/chimera-api/: Cargo.toml
crates/chimera-api/src/: auth.rs  client.rs  device_api.rs  endpoints.rs  firmware_api.rs  lib.rs  mock_server.rs  open_alternatives.rs  pics_api.rs  portcheck.rs  secure_api.rs  upload_api.rs
crates/chimera-apple/: Cargo.toml
crates/chimera-apple/src/: activation.rs  au_carrier_unlock.rs  bypass.rs  device.rs  icloud_endpoints.rs  ipsw.rs  lib.rs  lockdown.rs  network_unlock.rs  operations.rs  passcode.rs  recovery.rs  restore.rs  shsh.rs  spoof_bypass.rs  usbmuxd.rs
crates/chimera-apple/tests/: ipsw_test.rs
crates/chimera-core/: Cargo.toml
crates/chimera-core/benches/: imei_bench.rs  mac_bench.rs
crates/chimera-core/src/: backup.rs  certificate.rs  crypto.rs  device.rs  diagnostics.rs  error.rs  event.rs  firmware_meta.rs  imei.rs  lib.rs  mac_address.rs  progress.rs  protocol.rs  session.rs  usb.rs
crates/chimera-core/tests/: error_test.rs  imei_test.rs  mac_test.rs
crates/chimera-devices/: Cargo.toml
crates/chimera-devices/src/: database.rs  detector.rs  lib.rs  scanner.rs
crates/chimera-edl/: Cargo.toml
crates/chimera-edl/src/: client.rs  firehose.rs  lib.rs  operations.rs  sahara.rs  usb.rs
crates/chimera-fastboot/: Cargo.toml
crates/chimera-fastboot/src/: client.rs  flash.rs  lib.rs  protocol.rs  variables.rs
crates/chimera-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/chimera-ffi/include/: chimera_ffi.h
crates/chimera-ffi/src/: lib.rs
crates/chimera-ffi/tests/: dispatch_test.rs  memory_test.rs  stress_test.rs
crates/chimera-firmware/: Cargo.toml
crates/chimera-firmware/src/: checker.rs  downloader.rs  extractor.rs  lib.rs  samsung_fw.rs
crates/chimera-gui/: Cargo.toml  settings_network_mac.rs
crates/chimera-gui/assets/: icon.rgba
crates/chimera-gui/src/: app.rs  history.rs  icons.rs  local_event.rs  main.rs  menu.rs  persistence.rs  state.rs  theme.rs  worker.rs
crates/chimera-gui/src/ui/: about.rs  api_panel.rs  apple_panel.rs  au_unlock_panel.rs  common.rs  dashboard.rs  device_info.rs  device_list.rs  diagnostics_panel.rs  downloads.rs  firmware_panel.rs  hash_panel.rs  history_panel.rs  log_panel.rs  mediatek_panel.rs  menu.rs  mod.rs  nav.rs  network_tools.rs  operations.rs  pages.rs  pages_additions.rs  settings_network_mac.rs  settings_panel.rs  shsh_panel.rs  ssh_panel.rs  theme.rs  utilities_panel.rs
crates/chimera-htc/: Cargo.toml
crates/chimera-htc/src/: lib.rs  operations.rs
crates/chimera-huawei/: Cargo.toml
crates/chimera-huawei/src/: fastboot_mode.rs  harmony_cable.rs  lib.rs  operations.rs
crates/chimera-imobile/: Cargo.toml
crates/chimera-imobile/src/: activation.rs  backup.rs  diagnostics.rs  idevice_id.rs  info.rs  lib.rs  pair.rs  recovery.rs  restore.rs  tool.rs
crates/chimera-lg/: Cargo.toml
crates/chimera-lg/src/: lib.rs  operations.rs
crates/chimera-motorola/: Cargo.toml
crates/chimera-motorola/src/: lib.rs  operations.rs
crates/chimera-mtk/: Cargo.toml
crates/chimera-mtk/src/: brom.rs  da_protocol.rs  lib.rs  mtk_chipsets.rs  mtk_usb_vid_pid.txt  operations.rs  preloader.rs
crates/chimera-nokia/: Cargo.toml
crates/chimera-nokia/src/: lib.rs  operations.rs
crates/chimera-nothing/: Cargo.toml
crates/chimera-nothing/src/: lib.rs  operations.rs
crates/chimera-oppo/: Cargo.toml
crates/chimera-oppo/src/: coloros.rs  lib.rs  operations.rs
crates/chimera-pttpro/: Cargo.toml
crates/chimera-pttpro/src/: activation.rs  bulk.rs  client.rs  contacts.rs  departments.rs  devices.rs  error.rs  groups.rs  lib.rs  mock.rs  models.rs  users.rs
crates/chimera-purple/: Cargo.toml
crates/chimera-purple/src/: battery.rs  lib.rs  mode.rs  restore.rs  sniff.rs  station.rs  syscfg.rs
crates/chimera-samsung/: Cargo.toml
crates/chimera-samsung/src/: certificate.rs  csc.rs  efs.rs  eub.rs  firmware.rs  frp.rs  imei.rs  knox.rs  lib.rs  mdm.rs  mtk.rs  odin.rs  operations.rs  programmer.rs  read_codes.rs
crates/chimera-sony/: Cargo.toml
crates/chimera-sony/src/: bootloader.rs  flash.rs  lib.rs  operations.rs  ta_partition.rs
crates/chimera-unisoc/: Cargo.toml
crates/chimera-unisoc/src/: brom.rs  lib.rs  operations.rs  pac.rs
crates/chimera-utils/: Cargo.toml
crates/chimera-utils/src/: au_network_unlock.rs  host_probes.rs  imei_check.rs  lib.rs  magisk.rs  network_codes.rs  qr_code.rs  tap_diag.rs
crates/chimera-xiaomi/: Cargo.toml
crates/chimera-xiaomi/src/: edl_ops.rs  fastboot_ops.rs  lib.rs  miassistant.rs  operations.rs  unlock.rs
crates/chimera-zebra/: Cargo.toml
crates/chimera-zebra/src/: datawedge.rs  debug.rs  edl.rs  emm.rs  enumerate.rs  firmware.rs  lib.rs  models.rs  partitions.rs  rxlogger.rs  stagenow.rs
deploy/: AppIcon.icns  build_app.sh  build_rust.sh  package_dmg.sh  release.sh
docs/: ARCHITECT-AUDIT.md  BUILD-INFO.txt  BUILD-STATUS.md  CHANGELOG.md  CHANGELOG_v1.3.6.md  FILE-TREE.txt  IMPLEMENTATION-ROADMAP.md  chimera-gui.html
macos_app/: Info.plist  entitlements.plist
macos_app/swift/Chimera/Bridging/: Chimera-Bridging-Header.h  module.modulemap
macos_app/swift/Chimera/Resources/: bridge.js
macos_app/swift/Chimera/Sources/: AppDelegate.swift  BridgeMessageHandler.swift  ChimeraEngine.swift  MainWindowController.swift  WebViewController.swift
macos_app/swift/ChimeraTests/: BridgeMessageHandlerTests.swift  ChimeraEngineTests.swift  JSONValueTests.swift  WebViewControllerTests.swift
macos_app/swift/ChimeraUITests/: LaunchTests.swift  MockUSBTests.swift  RoundTripTests.swift
patches/: chimera_all_fixes.patch
tools/: dev_env.zsh  mock_adb_server.py
