[package]
name = "chimera-adb"
version = "1.3.0"
edition = "2021"
description = "Full ADB protocol implementation for ChimeraRS — macOS 10.14.6+ x86_64"

[dependencies]
chimera-core   = { path = "../chimera-core" }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }
log            = { workspace = true }
bytes          = { workspace = true }
byteorder      = { workspace = true }
hex            = { workspace = true }
sha2           = { workspace = true }
crc32fast      = { workspace = true }
rsa            = { version = "0.9", features = ["sha2", "sha1"] }
sha1             = { workspace = true }
rand           = { workspace = true }
base64         = { workspace = true }
async-trait    = "0.1"
dirs           = "6.0"
# hostname crate: works on macOS/Linux via POSIX gethostname(3)
hostname       = "0.4"
