[package]
name = "chimera-apple"
version = "1.0.0"
edition = "2021"
description = "Apple iPhone/iPad/iPod support for ChimeraRS"
authors = ["Open Source Community"]

[features]
default = []
au_carrier_unlock = ["fake", "tower", "tower-http"]

[dependencies]
url           = { version = "2.5", features = ["serde"] }
fake          = { version = "5.1", features = ["derive"], optional = true }
tower         = { version = "0.5", features = ["retry", "timeout", "util"], optional = true }
tower-http    = { version = "0.6", features = ["full"], optional = true }

chimera-core  = { path = "../chimera-core" }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
log           = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
bytes         = { workspace = true }
byteorder     = { workspace = true }
hex           = { workspace = true }
sha2          = { workspace = true }
sha1          = { workspace = true }
hmac          = { workspace = true }
plist         = "1.9"
rusb          = { workspace = true }
reqwest       = { workspace = true }
uuid          = { workspace = true }
rand          = { workspace = true }
base64        = { workspace = true }
chrono        = { workspace = true }
zip           = "8.6"
urlencoding   = { workspace = true }
dirs          = { workspace = true }
futures       = { workspace = true }