[package]
name = "chimera-fastboot"
version = "1.0.0"
edition = "2021"
description = "Fastboot protocol implementation for ChimeraRS"

[dependencies]
chimera-core = { path = "../chimera-core" }
rusb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
async-trait = "0.1"
