[package]
name = "chimera-firmware"
version = "1.0.0"
edition = "2021"
description = "Firmware download, extraction, and management"

[dependencies]
chimera-core = { path = "../chimera-core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
lzma-rs = { workspace = true }
