[package]
name        = "chimera-imobile"
version     = "1.0.0"
edition     = "2021"
description = "Cross-platform wrapper for the libimobiledevice CLI toolchain (idevice_id, ideviceinfo, ideviceactivation, idevicebackup2, idevicerestore, irecovery, …)"

[dependencies]
chimera-core   = { path = "../chimera-core" }
chimera-utils  = { path = "../chimera-utils" }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
plist          = "1.9"
which          = "8"
