[package]
name = "chimera-lg"
version = "1.0.0"
edition = "2021"

[dependencies]
chimera-core = { path = "../chimera-core" }
chimera-adb = { path = "../chimera-adb" }
chimera-fastboot = { path = "../chimera-fastboot" }
rusb = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
