[package]
name        = "chimera-pttpro"
version     = "1.0.0"
edition     = "2021"
description = "Zebra Workforce Connect PTT Pro — IT-Admin REST + Provisioning API client. Tenant management, bulk fleet enrollment, activation code orchestration."

[features]
default = []
# Spins up a local Axum-based mock server for offline development. Pulls
# in hyper + axum as dev-style deps. Skip in production builds.
mock = ["axum", "tower", "tokio/full"]
# CSV-driven bulk-provisioning helpers
bulk = ["csv"]

[dependencies]
chimera-core   = { path = "../chimera-core" }
chimera-utils  = { path = "../chimera-utils" }

serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }
chrono      = { workspace = true }
url         = { version = "2.5", features = ["serde"] }
urlencoding = { workspace = true }
uuid        = { workspace = true }
base64      = { workspace = true }

# Optional feature deps
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
csv   = { version = "1.4", optional = true }

[dev-dependencies]
# Tests use the mock server, but feature is enabled in cargo test by way of
# explicit invocation: cargo test -p chimera-pttpro --features "mock"
