[package]
name = "chimera-samsung"
version = "1.0.0"
edition = "2021"
description = "Samsung device operations - ODIN, EFS, FRP, IMEI, MDM, Knox"

[dependencies]
chimera-core = { path = "../chimera-core" }
chimera-adb = { path = "../chimera-adb" }
chimera-fastboot = { path = "../chimera-fastboot" }
rusb = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
crc32fast = { workspace = true }
lzma-rs = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
async-trait = "0.1"
tar = { workspace = true }

base64 = { workspace = true }
