[package]
name = "chimera-sony"
version = "1.0.0"
edition = "2021"

[dependencies]
chimera-core = { path = "../chimera-core" }
chimera-adb  = { path = "../chimera-adb" }
chimera-fastboot = { path = "../chimera-fastboot" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
