[package]
name = "chimera-utils"
version = "1.3.0"
edition = "2021"
description = "Utility functions: IMEI check, network code calc, QR code, ADB enable, AU network unlock"

[dependencies]
chimera-core = { path = "../chimera-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
log          = { workspace = true }
sha2         = { workspace = true }
md-5         = { workspace = true }
hex          = { workspace = true }
reqwest      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
qrcode       = "0.14"
image        = "0.25"
which        = "8"
